--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,12 +36,19 @@ jobs:
         dotnet build src/Hx.Abp.Attachment.EntityFrameworkCore/Hx.Abp.Attachment.EntityFrameworkCore.csproj -c Release
         dotnet pack src/Hx.Abp.Attachment.EntityFrameworkCore/Hx.Abp.Attachment.EntityFrameworkCore.csproj -c Release -o ./src/Hx.Abp.Attachment.EntityFrameworkCore /p:PackageVersion=$version
 
+        dotnet build src/Hx.Abp.Attachment.EntityFrameworkCore/Hx.Abp.Attachment.Application.ArchAI.csproj -c Release
+        dotnet pack src/Hx.Abp.Attachment.EntityFrameworkCore/Hx.Abp.Attachment.Application.ArchAI.csproj -c Release -o ./src/Hx.Abp.Attachment.Application.ArchAI /p:PackageVersion=$version
+
+        dotnet build src/Hx.Abp.Attachment.EntityFrameworkCore/Hx.Abp.Attachment.Application.ArchAI.Contracts.csproj -c Release
+        dotnet pack src/Hx.Abp.Attachment.EntityFrameworkCore/Hx.Abp.Attachment.Application.ArchAI.Contracts -c Release -o ./src/Hx.Abp.Attachment.Application.ArchAI.Contracts /p:PackageVersion=$version
+
         cp ./src/Hx.Abp.Attachment.Application/*.nupkg $GITHUB_WORKSPACE
         cp ./src/Hx.Abp.Attachment.Application.Contracts/*.nupkg $GITHUB_WORKSPACE
         cp ./src/Hx.Abp.Attachment.Domain/*.nupkg $GITHUB_WORKSPACE
         cp ./src/Hx.Abp.Attachment.Dmain.Shared/*.nupkg $GITHUB_WORKSPACE
         cp ./src/Hx.Abp.Attachment.EntityFrameworkCore/*.nupkg $GITHUB_WORKSPACE
-
+        cp ./src/Hx.Abp.Attachment.Application.ArchAI/*.nupkg $GITHUB_WORKSPACE
+        cp ./src/Hx.Abp.Attachment.Application.ArchAI.Contracts/*.nupkg $GITHUB_WORKSPACE
     - name: Push NuGet packages
       run: |
        dotnet nuget push ./src/Hx.Abp.Attachment.Application/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
@@ -49,3 +56,5 @@ jobs:
        dotnet nuget push ./src/Hx.Abp.Attachment.Domain/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
        dotnet nuget push ./src/Hx.Abp.Attachment.Dmain.Shared/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
        dotnet nuget push ./src/Hx.Abp.Attachment.EntityFrameworkCore/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
+       dotnet nuget push ./src/Hx.Abp.Attachment.Application.ArchAI/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
+       dotnet nuget push ./src/Hx.Abp.Attachment.Application.ArchAI.Contracts/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
