--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,11 +36,11 @@ jobs:
         dotnet build src/Hx.Abp.Attachment.EntityFrameworkCore/Hx.Abp.Attachment.EntityFrameworkCore.csproj -c Release
         dotnet pack src/Hx.Abp.Attachment.EntityFrameworkCore/Hx.Abp.Attachment.EntityFrameworkCore.csproj -c Release -o ./src/Hx.Abp.Attachment.EntityFrameworkCore /p:PackageVersion=$version
 
-        dotnet build src/Hx.Abp.Attachment.EntityFrameworkCore/Hx.Abp.Attachment.Application.ArchAI.csproj -c Release
-        dotnet pack src/Hx.Abp.Attachment.EntityFrameworkCore/Hx.Abp.Attachment.Application.ArchAI.csproj -c Release -o ./src/Hx.Abp.Attachment.Application.ArchAI /p:PackageVersion=$version
+        dotnet build src/Hx.Abp.Attachment.Application.ArchAI/Hx.Abp.Attachment.Application.ArchAI.csproj -c Release
+        dotnet pack src/Hx.Abp.Attachment.Application.ArchAI/Hx.Abp.Attachment.Application.ArchAI.csproj -c Release -o ./src/Hx.Abp.Attachment.Application.ArchAI /p:PackageVersion=$version
 
-        dotnet build src/Hx.Abp.Attachment.EntityFrameworkCore/Hx.Abp.Attachment.Application.ArchAI.Contracts.csproj -c Release
-        dotnet pack src/Hx.Abp.Attachment.EntityFrameworkCore/Hx.Abp.Attachment.Application.ArchAI.Contracts -c Release -o ./src/Hx.Abp.Attachment.Application.ArchAI.Contracts /p:PackageVersion=$version
+        dotnet build src/Hx.Abp.Attachment.Application.ArchAI.Contracts/Hx.Abp.Attachment.Application.ArchAI.Contracts.csproj -c Release
+        dotnet pack src/Hx.Abp.Attachment.Application.ArchAI.Contracts/Hx.Abp.Attachment.Application.ArchAI.Contracts.csproj -c Release -o ./src/Hx.Abp.Attachment.Application.ArchAI.Contracts /p:PackageVersion=$version
 
         cp ./src/Hx.Abp.Attachment.Application/*.nupkg $GITHUB_WORKSPACE
         cp ./src/Hx.Abp.Attachment.Application.Contracts/*.nupkg $GITHUB_WORKSPACE
