--- a/src/Hx.Abp.Attachment.Api/Hx.Abp.Attachment.Api.csproj
+++ b/src/Hx.Abp.Attachment.Api/Hx.Abp.Attachment.Api.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Hx.Abp.Attachment.Application.ArchAI.Contracts\Hx.Abp.Attachment.Application.ArchAI.Contracts.csproj" />
+    <ProjectReference Include="..\Hx.Abp.Attachment.Application.ArchAI\Hx.Abp.Attachment.Application.ArchAI.csproj" />
     <ProjectReference Include="..\Hx.Abp.Attachment.Application.Contracts\Hx.Abp.Attachment.Application.Contracts.csproj" />
     <ProjectReference Include="..\Hx.Abp.Attachment.Application\Hx.Abp.Attachment.Application.csproj" />
     <ProjectReference Include="..\Hx.Abp.Attachment.EntityFrameworkCore\Hx.Abp.Attachment.EntityFrameworkCore.csproj" />
