--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,36 @@ src/Hx.BgApp.Blazor.Tiered/Logs/*
 
 # Use abp install-libs to restore.
 **/wwwroot/libs/*
+
+# Additional Visual Studio and .NET Core generated files
+*.dtbcache.v2
+*.futdcache.v2
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# .NET Core/5/6/7/8 specific generated files
+**/obj/**/AssemblyInfo.cs
+**/obj/**/AssemblyInfoInputs.cache
+**/obj/**/*.GeneratedMSBuildEditorConfig.editorconfig
+**/obj/**/*.assets.cache
+**/obj/**/*.csproj.nuget.dgspec.json
+**/obj/**/*.csproj.nuget.g.props
+**/obj/project.assets.json
+**/obj/project.nuget.cache
+**/obj/**/.NETCoreApp,Version=*.AssemblyAttributes.cs
+**/obj/**/*.GlobalUsings.g.cs
+**/obj/**/*.csproj.CopyComplete
+**/obj/**/*.csproj.FileListAbsolute.txt
+**/obj/**/*.Up2Date
+
+# Visual Studio 2022 specific files
+.vs/**/DesignTimeBuild/.dtbcache.v2
+.vs/**/v17/.futdcache.v2
+.vs/**/v17/.suo
+.vs/**/config/applicationhost.config
+
+# Ensure all obj and bin directories are ignored
+**/obj/
+**/bin/
