--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,8 @@ jobs:
         dotnet build src/Hx.Abp.Attachment.Application.ArchAI.Contracts/Hx.Abp.Attachment.Application.ArchAI.Contracts.csproj -c Release
         dotnet pack src/Hx.Abp.Attachment.Application.ArchAI.Contracts/Hx.Abp.Attachment.Application.ArchAI.Contracts.csproj -c Release -o ./src/Hx.Abp.Attachment.Application.ArchAI.Contracts /p:PackageVersion=$version
 
+        dotnet build src/Hx.Abp.Attachment.HttpApi/Hx.Abp.Attachment.HttpApi.csproj -c Release
+        dotnet pack src/Hx.Abp.Attachment.HttpApi/Hx.Abp.Attachment.HttpApi.csproj -c Release -o ./src/Hx.Abp.Attachment.HttpApi /p:PackageVersion=$version
         cp ./src/Hx.Abp.Attachment.Application/*.nupkg $GITHUB_WORKSPACE
         cp ./src/Hx.Abp.Attachment.Application.Contracts/*.nupkg $GITHUB_WORKSPACE
         cp ./src/Hx.Abp.Attachment.Domain/*.nupkg $GITHUB_WORKSPACE
@@ -49,6 +51,7 @@ jobs:
         cp ./src/Hx.Abp.Attachment.EntityFrameworkCore/*.nupkg $GITHUB_WORKSPACE
         cp ./src/Hx.Abp.Attachment.Application.ArchAI/*.nupkg $GITHUB_WORKSPACE
         cp ./src/Hx.Abp.Attachment.Application.ArchAI.Contracts/*.nupkg $GITHUB_WORKSPACE
+        cp ./src/Hx.Abp.Attachment.HttpApi/*.nupkg $GITHUB_WORKSPACE
     - name: Push NuGet packages
       run: |
        dotnet nuget push ./src/Hx.Abp.Attachment.Application/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
@@ -58,3 +61,4 @@ jobs:
        dotnet nuget push ./src/Hx.Abp.Attachment.EntityFrameworkCore/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
        dotnet nuget push ./src/Hx.Abp.Attachment.Application.ArchAI/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
        dotnet nuget push ./src/Hx.Abp.Attachment.Application.ArchAI.Contracts/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
+       dotnet nuget push ./src/Hx.Abp.Attachment.HttpApi/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
