--- a/src/Hx.Abp.Attachment.EntityFrameworkCore/Hx.Abp.Attachment.EntityFrameworkCore.csproj
+++ b/src/Hx.Abp.Attachment.EntityFrameworkCore/Hx.Abp.Attachment.EntityFrameworkCore.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
     <PackageReference Include="Pgvector.EntityFrameworkCore" Version="0.2.0" />
+    <PackageReference Include="Volo.Abp" Version="8.1.1" />
     <PackageReference Include="Volo.Abp.Users.EntityFrameworkCore" Version="8.1.1" />
   </ItemGroup>
 
