feat: 添加批量文件分类功能和智能分类推荐
- 新增批量确定文件分类接口 (ConfirmFileClassificationsAsync)
- 添加 ConfirmFileClassificationRequest DTO 类
- 实现根据业务引用和模板用途查询文件列表功能
- 添加智能分类推荐接口 (GetFilesWithSmartClassificationByReferenceAndTemplatePurposeAsync)
- 优化分类查询性能，使用Path路径查询替代递归
- 更新 AttachFile 实体，添加 Reference、TemplatePurpose、IsCategorized 属性
- 完善 API 文档，添加新接口说明和使用示例
- 添加数据库迁移脚本 (add-ref-purpose-to-files.sql)

主要功能:
1. 支持单个和批量文件分类确认
2. 基于业务引用和模板用途的文件查询
3. 智能分类推荐和分类选项提供
4. 性能优化的分类树查询
5. 完整的错误处理和日志记录

--- a/src/Hx.Abp.Attachment.Application.Contracts/Hx.Abp.Attachment.Application.Contracts.csproj
+++ b/src/Hx.Abp.Attachment.Application.Contracts/Hx.Abp.Attachment.Application.Contracts.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Hx.Abp.Attachment.Application.ArchAI.Contracts\Hx.Abp.Attachment.Application.ArchAI.Contracts.csproj" />
     <ProjectReference Include="..\Hx.Abp.Attachment.Dmain.Shared\Hx.Abp.Attachment.Dmain.Shared.csproj" />
   </ItemGroup>
 
