--- a/src/Hx.Abp.Attachment.Api/appsettings.json
+++ b/src/Hx.Abp.Attachment.Api/appsettings.json
@@ -17,6 +17,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "User ID=root;Password=root;Host=localhost;Port=5432;Database=cadastral;"
+    "Default": "User ID=root;Password=root;Host=192.168.2.13;Port=5432;Database=cadastral;"
   }
 }
