--- a/src/Hx.Abp.Attachment.Application/Hx.Abp.Attachment.Application.csproj
+++ b/src/Hx.Abp.Attachment.Application/Hx.Abp.Attachment.Application.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <PackageReference Include="Volo.Abp.Ddd.Application" Version="8.1.1" />
     <PackageReference Include="Volo.Abp.AutoMapper" Version="8.1.1" />
+    <PackageReference Include="Volo.Abp.Identity.Domain" Version="8.1.1" />
     
     <!-- 跨平台PDF转图片相关包 -->
     <PackageReference Include="PdfPig" Version="0.1.8" />
