--- a/src/Hx.Abp.Attachment.Application.Contracts/Hx.Abp.Attachment.Application.Contracts.csproj
+++ b/src/Hx.Abp.Attachment.Application.Contracts/Hx.Abp.Attachment.Application.Contracts.csproj
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Hx.Abp.Attachment.Application.ArchAI.Contracts\Hx.Abp.Attachment.Application.ArchAI.Contracts.csproj" />
-    <ProjectReference Include="..\Hx.Abp.Attachment.Dmain.Shared\Hx.Abp.Attachment.Dmain.Shared.csproj" />
+    <ProjectReference Include="..\Hx.Abp.Attachment.Domain.Shared\Hx.Abp.Attachment.Domain.Shared.csproj" />
   </ItemGroup>
 
 </Project>
