--- a/src/Hx.Abp.Attachment.Application/Hx.Abp.Attachment.Application.csproj
+++ b/src/Hx.Abp.Attachment.Application/Hx.Abp.Attachment.Application.csproj
@@ -11,7 +11,7 @@
     <ProjectReference Include="..\Hx.Abp.Attachment.Application.Contracts\Hx.Abp.Attachment.Application.Contracts.csproj" />
     <ProjectReference Include="..\Hx.Abp.Attachment.Domain\Hx.Abp.Attachment.Domain.csproj" />
     <ProjectReference Include="..\Hx.Abp.Attachment.Application.ArchAI\Hx.Abp.Attachment.Application.ArchAI.csproj" />
-    <ProjectReference Include="..\Hx.Abp.Attachment.Dmain.Shared\Hx.Abp.Attachment.Dmain.Shared.csproj" />
+    <ProjectReference Include="..\Hx.Abp.Attachment.Domain.Shared\Hx.Abp.Attachment.Domain.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
