--- a/src/Hx.Abp.Attachment.EntityFrameworkCore/Hx.Abp.Attachment.EntityFrameworkCore.csproj
+++ b/src/Hx.Abp.Attachment.EntityFrameworkCore/Hx.Abp.Attachment.EntityFrameworkCore.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Hx.Abp.Attachment.Domain\Hx.Abp.Attachment.Domain.csproj" />
-    <ProjectReference Include="..\Hx.Abp.Attachment.Dmain.Shared\Hx.Abp.Attachment.Dmain.Shared.csproj" />
+    <ProjectReference Include="..\Hx.Abp.Attachment.Domain.Shared\Hx.Abp.Attachment.Domain.Shared.csproj" />
   </ItemGroup>
 
 </Project>
